# viberfox

./: .env.example  AGENTS.md  CLAUDE.md  Cargo.toml  HOW_TO_USE_PRIM_UI.md  README.md
.cursor/rules/: adr.mdc  build-and-iteration.mdc
assets/: README.md
assets/shaders/: starsky.wgsl
assets/sky/: CREDITS.md
crates/vibe_core/src/: geo.rs  lib.rs  protocol.rs
crates/vibe_sim/: Cargo.toml
crates/vibe_sim/migrations/: V1__initial.sql  V2__prim_texture.sql  V3__prim_geometry_and_surface.sql
crates/vibe_sim/src/: cli.rs  config.rs  db.rs  main.rs  net.rs  state.rs  textures.rs
crates/viberfox/: Cargo.toml
crates/viberfox/src/: components.rs  main.rs  resources.rs
crates/viberfox/src/db/: schema.rs
crates/viberfox/src/systems/: ai_assistant.rs  avatar.rs  database.rs  debug.rs  egui_manager.rs  free_camera.rs  gizmo.rs  map_stream.rs  map_tiles.rs  mod.rs  network.rs  osm_buildings.rs  picking.rs  prim_ops.rs  rendering.rs  ui.rs
crates/viberfox/src/utils/: mod.rs  tile_utils.rs
crates/vibers-rs/: Cargo.toml
crates/vibers-rs/src/: components.rs  main.rs  resources.rs
crates/vibers-rs/src/systems/: free_camera.rs  gizmo.rs  mod.rs  picking.rs  rendering.rs  tile_loader.rs  ui.rs
crates/vibers-sim/: Cargo.toml
crates/vibers-sim/src/: db.rs  main.rs
meta/: README.md
meta/abstract/: README.md  adr-resolution.md  capability-map.md  glossary.md  principles.md  roadmap.md  vision.md
meta/adr/: 001-bevy-game-engine.md  002-sqlite-storage.md  003-ecs-architecture.md  004-osm-tile-integration.md  005-sky-lighting-system.md  006-world-coordinate-and-osm-anchor.md  007-simulation-vs-client-process-model.md  008-network-transport-layer.md  009-application-protocol-envelope-v0.md  010-authoritative-avatar-state-v0.md  011-static-world-replication-v0.md  012-interest-management-and-osm-tiles.md  013-sqlite-migrations-and-server-writer.md  014-runtime-configuration-and-operations.md  015-workspace-module-boundaries.md  016-authentication-and-session-model-v0.md  018-prim-texture-surface-params.md  019-planet-scale-floating-origin.md  020-map-tier-and-sim-tier-world-model.md  021-region-tessellation-flat-clusters-quad-index.md  022-osm-building-import.md  README.md  index.md  template.md
meta/adr/017/: INDEX.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PLAN.md  PHASE_3_COMPLETE.md  PHASE_4_5_6_IMPLEMENTATION.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_5_EGUI_IMPLEMENTATION.md  PHASE_5_IMPLEMENTATION_UPDATE.md  PHASE_6_COMPLETE.md  README.md  SUMMARY.md
