[workspace]
resolver = "2"
members = ["crates/vibe_core", "crates/vibe_sim", "crates/viberfox"]
default-members = ["crates/viberfox"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
# Slimmer than `default`: drops UI, 2D sprite stack, audio, gamepads, gizmos, picking — less LLVM work per build.
bevy = { version = "0.16", default-features = false, features = [
    "animation",
    "async_executor",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "jpeg",
    "multi_threaded",
    "png",
    "smaa_luts",
    "std",
    "tonemapping_luts",
    "wayland",
    "x11",
] }
bevy_atmosphere = { version = "0.13", default-features = false, features = [
    "nishita",
    "procedural",
] }
bevy_image = "0.16"
big_space = "0.10"
bytes = "1.9"
egui = "0.31"
egui-wgpu = { version = "0.31", default-features = false }
clap = { version = "4.5", features = ["derive"] }
earcutr = "0.4"
figment = { version = "0.10", features = ["toml", "env"] }
glam = { version = "0.29", features = ["serde"] }
image = "0.24"
postcard = { version = "1.1", features = ["alloc"] }
refinery = { version = "0.8", features = ["rusqlite-bundled"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.42", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2.9", features = ["gzip"] }
dotenvy = "0.15"
serde_json = "1"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Default dev: fast dependency rebuilds; workspace crates at O1 (Bevy suggests O1+ for playable debug — see link in README).
# https://bevy.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
[profile.dev]
opt-level = 1
incremental = true
codegen-units = 256
debug = 1
# Faster incremental links on Linux: debug info in `.dwo` files instead of monolithic binary.
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 0
codegen-units = 256

# Full Bevy book recipe: O3 on all dependencies — better dev *runtime*, much slower clean / dep rebuilds.
# https://bevy.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
[profile.dev-bevy]
inherits = "dev"

[profile.dev-bevy.package."*"]
opt-level = 3
codegen-units = 256

[profile.dev-bevy.package.vibe_core]
opt-level = 0
