[package]
name = "vibe_sim"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vibe_sim"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["std", "sink", "async-await"] }
figment = { workspace = true, features = ["toml", "env"] }
glam.workspace = true
refinery = { workspace = true }
rusqlite.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vibe_core = { path = "../vibe_core" }

[dev-dependencies]
tempfile = "3.0"
