[package]
name = "viberfox"
version.workspace = true
edition.workspace = true

[features]
default = []
# Faster incremental linking when hacking gameplay; not for release binaries.
fast-dev = ["bevy/dynamic_linking"]

[dependencies]
anyhow.workspace = true
bevy.workspace = true
bevy_atmosphere.workspace = true
bevy_image.workspace = true
big_space.workspace = true
clap.workspace = true
earcutr.workspace = true
glam.workspace = true
image.workspace = true
postcard.workspace = true
rusqlite.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true
uuid.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
vibe_core = { path = "../vibe_core" }
bytes.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["std", "sink", "async-await"] }
